Sun Jan 10 16:29:16 GMT 2010  Jon Harrop <jon@ffconsultancy.com>

	* Removed the use of AddressOf in the hash table test.
	* Added --no-stack-handler option so you can remove the libsigsegv
	handler that is used to detect stack overflows.
	* Convert some remaining uses of GetValue in the GC to use the abstract
	Seq.* API.
	* Fixed a bug where Alloc wasn't initializing mark state so it could
	already be marked when the mark phase starts and its children could go
	unmarked and get reclaimed despite being reachable.


Thu Jan  7 15:18:59 GMT 2010  Jon Harrop <jon@ffconsultancy.com>

	* Added a `Byte type to HLVM to make strings easier to use.
	* Ported the ray tracer benchmark from OCaml to HLVM. HLVM is
	  significantly faster despite the use of the FFI to do sqrt.
	* Made runtime.cpp 64-bit happy (int -> long).


Mon Jan  4 07:49:18 GMT 2010  Jon Harrop <jon@ffconsultancy.com>

	* Inlined get_stack.
	* Changed the value "unit" to an undef rather than "int 0".
	* Fixed unnecessary allocation of mark state for empty (NULL) arrays:
	parallel n-queens is ~3% faster.
	* Fixed the calculator example.


Fri Jan  1 20:57:09 GMT 2010  Jon Harrop <jon@ffconsultancy.com>

	* Optimized thread-local data to be passed by pointer in function
	arguments, dramatically improving performance.
	* Removed some concurrency bugs in the GC.
	* Altered the parallel n-queens test to recursively spawn child
	threads.
	* Implemented ptr->size map in runtime.cpp to check for double frees
	when runtime is in debugging mode.


Mon Nov 30 01:14:49 GMT 2009  Jon Harrop <jon@ffconsultancy.com>

	* First working version of threads and stop-the-world GC. Only took 5
	days to implement!
	* Global list of active threads and GC state (running or stopping the
	world).
	* Thread local state keeps thread state (running or suspended) and
	shadow stack.
	* First thread to hit allocation quota starts a GC by suspending all
	other threads and performing the same mark+sweep algorithm, albeit