@@ -2,3 +2,4 @@ The following people have contributed to the HLVM project:
 
 Jon Harrop <jon@ffconsultancy.com> (lead dev)
 Alp Mestan <alpmestan@gmail.com>
+Gabriel Scherer <bluestorm.dylc@gmail.com>
